<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_meuPerfil"
            android:icon="@drawable/nav_meu_perfil"
            android:title="@string/meu_perfil"/>
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/nav_edit_perfil"
            android:title="@string/editar_perfil"/>
        <item
            android:id="@+id/nav_suporte"
            android:icon="@drawable/nav_suporte"
            android:title="@string/suporte"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/nav_logout"
            android:title="@string/sair"/>

    </group>

</menu>