<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastroUsuario">


    <!--<ImageButton
        android:id="@+id/btnVoltar_CadastroActivity"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:background="@null"
        android:contentDescription="voltar"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />-->

    <TextView
        android:id="@+id/textViewTitulo_CadastroActivity"
        android:layout_width="296dp"
        android:layout_height="28dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/bemvindo"
        android:textColor="#131313"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewSubtitulo_CadastroActivity"
        android:layout_width="250dp"
        android:layout_height="24dp"
        android:layout_gravity="center|left"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins"
        android:text="@string/vamosComecar"
        android:textColor="#131313" />

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="120dp"
        android:layout_height="21dp"
        android:text="@string/nome_completo"
        android:fontFamily="@font/poppins"
        android:textColor="#131313"
        android:layout_marginTop="38dp"
        android:layout_marginLeft="25dp"/>

    <EditText
        android:id="@+id/editTextNome_CadastroActivity"
        android:layout_width="360dp"
        android:layout_height="54dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hintNome"
        android:paddingLeft="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="11dp"
        android:background="@drawable/bg_edittext"/>

    <TextView
        android:id="@+id/textViewUsername_CadastroActivity"
        android:layout_width="130dp"
        android:layout_height="21dp"
        android:text="@string/nome_de_usuario"
        android:fontFamily="@font/poppins"
        android:textColor="#131313"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"/>

    <EditText
        android:id="@+id/editTextUsername_CadastroActivity"
        android:layout_width="360dp"
        android:layout_height="54dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/hintusername"
        android:paddingLeft="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="11dp"
        android:background="@drawable/bg_edittext"/>

    <TextView
        android:id="@+id/textViewEmail_CadastroActivity"
        android:layout_width="130dp"
        android:layout_height="21dp"
        android:text="@string/email"
        android:fontFamily="@font/poppins"
        android:textColor="#131313"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"/>

    <EditText
        android:id="@+id/editTextEmail_CadastroActivity"
        android:layout_width="360dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginTop="11dp"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:hint="@string/hintemail"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/textViewSenha_CadastroActivity"
        android:layout_width="130dp"
        android:layout_height="21dp"
        android:text="@string/senha"
        android:fontFamily="@font/poppins"
        android:textColor="#131313"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"/>

    <EditText
        android:id="@+id/editTextSenha_CadastroActivity"
        android:layout_width="360dp"
        android:layout_height="54dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hintSenha"
        android:paddingLeft="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="11dp"
        android:background="@drawable/bg_edittext"/>

    <ImageButton
        android:id="@+id/btnCadastrar_CadastroActivity"
        android:layout_width="350dp"
        android:layout_height="68dp"
        android:scaleType="centerInside"
        android:background="@null"
        android:layout_marginTop="34dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/btncadastrar"
        android:contentDescription="Botão para confirmar cadastro" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="45dp"
            android:fontFamily="@font/poppins"
            android:text="@string/btnPossuiConta"
            android:textAlignment="textEnd"
            android:textColor="#131313" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEntrar_CadastroActivity"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginLeft="2dp"
            android:background="@null"
            android:contentDescription="Botão para se redirecionar para a aba de login"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/btn_entre_aqui"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="#FA733E" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</LinearLayout>